--- a/pympress/share/locale/pympress.pot
+++ b/pympress/share/locale/pympress.pot
@@ -6,7 +6,7 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Pympress v0.6\n"
+"Project-Id-Version: Pympress v1.0\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
 "POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
@@ -148,6 +148,12 @@ msgstr ""
 msgid "Usage: {} [options] <presentation_file>"
 msgstr ""
 
+msgid "Video support using VLC is disabled."
+msgstr ""
+
+msgid "Video support using VLC is enabled."
+msgstr ""
+
 msgid "Warning: Content and presenter window must not be on the same monitor if you start full screen!"
 msgstr ""
 
@@ -178,6 +184,9 @@ msgstr ""
 msgid "_Blank screen"
 msgstr ""
 
+msgid "_Close File"
+msgstr ""
+
 msgid "_File"
 msgstr ""
 
@@ -206,6 +215,9 @@ msgid "_Next"
 msgstr ""
 
 msgid "_Note mode"
+msgstr ""
+
+msgid "_Open"
 msgstr ""
 
 msgid "_Pause timer"
