"Notes mode" sounds better in English
Translations are unchanged, but since the code is in English the lookup
en -> translated language has to be updated

--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -234,7 +234,7 @@ msgstr "_Navigation"
 msgid "_Next"
 msgstr "_Nächste"
 
-msgid "_Note mode"
+msgid "_Notes mode"
 msgstr "_Notizmodus"
 
 msgid "_Open"
