Add french translation for "Open Recent"
Also update some gettext output: more text per line, etc.

--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -7,16 +7,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Pympress v1.0\n"
 "Report-Msgid-Bugs-To: me@cimba.li\n"
-"POT-Creation-Date: 2017-02-28 10:40+0100\n"
+"POT-Creation-Date: 2016-10-24 15:50+0200\n"
 "PO-Revision-Date: 2017-02-28 11:08+0100\n"
+"Last-Translator: FriedrichFroebel\n"
 "Language-Team: \n"
+"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: Poedit 1.8.7.1\n"
-"Last-Translator: FriedrichFroebel\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Language: de\n"
 
 msgid "(paused)"
 msgstr "(pausiert)"
@@ -60,11 +60,8 @@ msgstr "FEHLER Für diesen Link ist keine Aktion definiert!"
 msgid "Error loading icon for about window"
 msgstr "Fehler beim Laden des Icons für das \"Über\"-Fenster"
 
-msgid ""
-"Error: access denied when trying to access screen saver settings in registry!"
-msgstr ""
-"Fehler: Zugriff auf die Bildschirmschoner-Einstellungen der Register nicht "
-"erlaubt!"
+msgid "Error: access denied when trying to access screen saver settings in registry!"
+msgstr "Fehler: Zugriff auf die Bildschirmschoner-Einstellungen der Register nicht erlaubt!"
 
 msgid "Highlight"
 msgstr "Hervorheben"
@@ -81,16 +78,17 @@ msgstr "Für diesen Link wurde keine Aktion definiert"
 msgid ""
 "No file selected!\n"
 "\n"
-"You can specify the PDF file to open on the command line if you don't want "
-"to use the \"Open File\" dialog."
+"You can specify the PDF file to open on the command line if you don't want to use the \"Open File\" dialog."
 msgstr ""
 "Keine Datei ausgewählt!\n"
 "\n"
-"Die zu öffnende PDF-Datei kann via Kommandozeile übergeben werden, falls der "
-"\"Datei öffnen\"-Dialog nicht verwendet werden soll."
+"Die zu öffnende PDF-Datei kann via Kommandozeile übergeben werden, falls der \"Datei öffnen\"-Dialog nicht verwendet werden soll."
 
 msgid "Notes"
 msgstr "Notizen"
+
+msgid "Open _Recent"
+msgstr ""
 
 msgid "Open..."
 msgstr "Öffnen..."
@@ -164,30 +162,20 @@ msgstr "Videounterstützung auf Basis von VLC ist deaktiviert."
 msgid "Video support using VLC is enabled."
 msgstr "Videounterstützung auf Basis von VLC ist aktiviert."
 
-msgid ""
-"Warning: Content and presenter window must not be on the same monitor if you "
-"start full screen!"
-msgstr ""
-"Warnung: Inhalts- und Präsentator-Fenster dürfen beim Start im Vollbild-"
-"Modus nicht auf dem gleichen Monitor sein!"
+msgid "Warning: Content and presenter window must not be on the same monitor if you start full screen!"
+msgstr "Warnung: Inhalts- und Präsentator-Fenster dürfen beim Start im Vollbild-Modus nicht auf dem gleichen Monitor sein!"
 
 msgid "Warning: Could not disable DPMS screen blanking: got status "
-msgstr ""
-"Warnung: DPMS-Deaktivierung des Bildschirms kann nicht abgeschaltet werden: "
-"Status"
+msgstr "Warnung: DPMS-Deaktivierung des Bildschirms kann nicht abgeschaltet werden: Status"
 
 msgid "Warning: Could not enable DPMS screen blanking: got status "
-msgstr ""
-"Warnung: DPMS-Deaktivierung des Bildschirms kann nicht eingeschaltet werden: "
-"Status"
+msgstr "Warnung: DPMS-Deaktivierung des Bildschirms kann nicht eingeschaltet werden: Status"
 
 msgid "Warning: Could not set screensaver status: got status "
 msgstr "Warnung: Bildschirmschoner-Status kann nicht gesetzt werden: Status"
 
 msgid "Warning: Unsupported OS: can't enable/disable screensaver"
-msgstr ""
-"Warnung: Nicht unterstütztes OS: Bildschirmschoner kann nicht aktiviert/"
-"deaktiviert werden"
+msgstr "Warnung: Nicht unterstütztes OS: Bildschirmschoner kann nicht aktiviert/deaktiviert werden"
 
 msgid "Warning: video support is disabled"
 msgstr "Warnung: Videounterstützung ist deaktiviert"
@@ -261,12 +249,8 @@ msgstr "_Startkonfiguration"
 msgid "_Swap screens"
 msgstr "Bildschirme _tauschen"
 
-msgid ""
-"pympress is a little PDF reader written in Python using Poppler for PDF "
-"rendering and GTK for the GUI.\n"
-msgstr ""
-"pympress ist ein kleiner PDF-Reader, geschrieben in Python unter Verwendung "
-"von Poppler für die PDF-Anzeige und GTK für die GUI.\n"
+msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
+msgstr "pympress ist ein kleiner PDF-Reader, geschrieben in Python unter Verwendung von Poppler für die PDF-Anzeige und GTK für die GUI.\n"
 
 msgid "pympress presenter"
 msgstr "pympress Präsentationen"
