--- a/pympress/share/locale/fr/pympress.po
+++ b/pympress/share/locale/fr/pympress.po
@@ -82,6 +82,9 @@ msgstr ""
 msgid "Notes"
 msgstr "Notes"
 
+msgid "Open _Recent"
+msgstr "_Récemment ouverts"
+
 msgid "Open..."
 msgstr "Ouvrir..."
 
