Add polish translation for 'Open Recent"

--- a/pympress/share/locale/pl/pympress.po
+++ b/pympress/share/locale/pl/pympress.po
@@ -85,6 +85,9 @@ msgstr ""
 msgid "Notes"
 msgstr "Notatki"
 
+msgid "Open _Recent"
+msgstr "Otwórz _Ostatni"
+
 msgid "Open..."
 msgstr "Otwórz..."
 
