--- a/pympress/share/locale/de/pympress.po
+++ b/pympress/share/locale/de/pympress.po
@@ -11,12 +11,15 @@ msgstr ""
 "PO-Revision-Date: 2017-02-28 11:08+0100\n"
 "Last-Translator: FriedrichFroebel\n"
 "Language-Team: \n"
-"Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: de\n"
 "X-Generator: Poedit 1.8.7.1\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
+
+msgid "(and optionally seconds)"
+msgstr ""
 
 msgid "(paused)"
 msgstr "(pausiert)"
@@ -36,6 +39,10 @@ msgstr "Große Buttons"
 msgid "Clock"
 msgstr "Uhr"
 
+#, fuzzy
+msgid "Content and presenter window must not be on the same monitor if you start full screen!"
+msgstr "Warnung: Inhalts- und Präsentator-Fenster dürfen beim Start im Vollbild-Modus nicht auf dem gleichen Monitor sein!"
+
 msgid "Content blanked"
 msgstr "Inhaltsanzeige deaktiviert"
 
@@ -45,8 +52,20 @@ msgstr "Vollbildanzeige"
 msgid "Contributors:"
 msgstr "Beitragende:"
 
+#, fuzzy
+msgid "Could not disable DPMS screen blanking: got status "
+msgstr "Warnung: DPMS-Deaktivierung des Bildschirms kann nicht abgeschaltet werden: Status"
+
+#, fuzzy
+msgid "Could not enable DPMS screen blanking: got status "
+msgstr "Warnung: DPMS-Deaktivierung des Bildschirms kann nicht eingeschaltet werden: Status"
+
 msgid "Could not find the file \"{}\""
 msgstr "Die Datei \"{}\" konnte nicht gefunden werden"
+
+#, fuzzy
+msgid "Could not set screensaver status: got status "
+msgstr "Warnung: Bildschirmschoner-Status kann nicht gesetzt werden: Status"
 
 msgid "Current slide"
 msgstr "Aktuelle Folie"
@@ -60,11 +79,18 @@ msgstr "FEHLER Für diesen Link ist keine Aktion definiert!"
 msgid "Error loading icon for about window"
 msgstr "Fehler beim Laden des Icons für das \"Über\"-Fenster"
 
+#, fuzzy
+msgid "Error opening the file \"{}\""
+msgstr "Die Datei \"{}\" konnte nicht gefunden werden"
+
 msgid "Error: access denied when trying to access screen saver settings in registry!"
 msgstr "Fehler: Zugriff auf die Bildschirmschoner-Einstellungen der Register nicht erlaubt!"
 
 msgid "Highlight"
 msgstr "Hervorheben"
+
+msgid "Invalid log level \"{}\", try one of {}"
+msgstr ""
 
 msgid "Invalid time (mm or mm:ss expected), got \"{}\""
 msgstr "Ungültige Zeit (mm oder mm:ss erwartet), habe \"{}\""
@@ -84,6 +110,9 @@ msgstr ""
 "\n"
 "Die zu öffnende PDF-Datei kann via Kommandozeile übergeben werden, falls der \"Datei öffnen\"-Dialog nicht verwendet werden soll."
 
+msgid "Not starting content or presenter window full screen because there is only one monitor"
+msgstr ""
+
 msgid "Notes"
 msgstr "Notizen"
 
@@ -99,11 +128,18 @@ msgstr "Optionen:"
 msgid "PDF files"
 msgstr "PDF-Dateien"
 
+msgid "Pointer"
+msgstr ""
+
 msgid "Presenter fullscreen"
 msgstr "Vollbild für Präsentator"
 
 msgid "Pympress Content"
 msgstr "Pympress-Inhalt"
+
+#, fuzzy
+msgid "Pympress can not extract attached file"
+msgstr "Pympress kann eingebettete Medien nicht extrahieren"
 
 msgid "Pympress can not extract embedded media"
 msgstr "Pympress kann eingebettete Medien nicht extrahieren"
@@ -125,6 +161,9 @@ msgstr "Pympress unterstützt den Link-Typ \"{}\" noch nicht"
 
 msgid "Pympress does not yet support link type \"{}\" to \"{}\""
 msgstr "Pympress unterstützt den Link-Typ \"{}\" nach \"{}\" noch nicht"
+
+msgid "Set level of verbosity in log file:"
+msgstr ""
 
 msgid "Set talk _Time"
 msgstr "Redezeit setzen"
@@ -152,6 +191,10 @@ msgstr "Unbekanntes Widget {} für das Vollbild, Abbruch."
 
 msgid "Unknown event {}"
 msgstr "Unbekanntes Event {}"
+
+#, fuzzy
+msgid "Unsupported OS: can't enable/disable screensaver"
+msgstr "Warnung: Nicht unterstütztes OS: Bildschirmschoner kann nicht aktiviert/deaktiviert werden"
 
 msgid "Usage: {} [options] <presentation_file>"
 msgstr "Verwendung: {} [optionen] <Präsentationsdatei>"
@@ -192,8 +235,15 @@ msgstr "_Anmerkungen"
 msgid "_Blank screen"
 msgstr "_Leerer Bildschirm"
 
+#, fuzzy
+msgid "_Blue"
+msgstr "_Datei"
+
 msgid "_Close File"
 msgstr "Datei _schließen"
+
+msgid "_Disabled"
+msgstr ""
 
 msgid "_File"
 msgstr "_Datei"
@@ -206,6 +256,9 @@ msgstr "_Vollbild"
 
 msgid "_Go to..."
 msgstr "_Springen zu..."
+
+msgid "_Green"
+msgstr ""
 
 msgid "_Help"
 msgstr "_Hilfe"
@@ -240,6 +293,9 @@ msgstr "_Vorherige"
 msgid "_Quit"
 msgstr "_Beenden"
 
+msgid "_Red"
+msgstr ""
+
 msgid "_Reset timer"
 msgstr "Timer _zurücksetzen"
 
@@ -249,8 +305,23 @@ msgstr "_Startkonfiguration"
 msgid "_Swap screens"
 msgstr "Bildschirme _tauschen"
 
+#, fuzzy
+msgid "access denied when trying to access screen saver settings in registry!"
+msgstr "Fehler: Zugriff auf die Bildschirmschoner-Einstellungen der Register nicht erlaubt!"
+
+#, fuzzy
+msgid "no action defined for this link!"
+msgstr "FEHLER Für diesen Link ist keine Aktion definiert!"
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
 msgstr "pympress ist ein kleiner PDF-Reader, geschrieben in Python unter Verwendung von Poppler für die PDF-Anzeige und GTK für die GUI.\n"
 
 msgid "pympress presenter"
 msgstr "pympress Präsentationen"
+
+#, fuzzy
+msgid "video support is disabled"
+msgstr "Warnung: Videounterstützung ist deaktiviert"
+
+msgid "{}, {}, {}, {}, or {}"
+msgstr ""
