--- a/pympress/share/locale/pympress.pot
+++ b/pympress/share/locale/pympress.pot
@@ -1,6 +1,19 @@
+# #-#-#-#-#  pympress.pot (Pympress v1.0)  #-#-#-#-#
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the Pympress package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+# #-#-#-#-#  glade.po (PACKAGE VERSION)  #-#-#-#-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+# #-#-#-#-#  python.po (PACKAGE VERSION)  #-#-#-#-#
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
+# This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
 #, fuzzy
@@ -16,6 +29,9 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+msgid "(and optionally seconds)"
+msgstr ""
+
 msgid "(paused)"
 msgstr ""
 
@@ -34,6 +50,9 @@ msgstr ""
 msgid "Clock"
 msgstr ""
 
+msgid "Content and presenter window must not be on the same monitor if you start full screen!"
+msgstr ""
+
 msgid "Content blanked"
 msgstr ""
 
@@ -43,7 +62,16 @@ msgstr ""
 msgid "Contributors:"
 msgstr ""
 
+msgid "Could not disable DPMS screen blanking: got status "
+msgstr ""
+
+msgid "Could not enable DPMS screen blanking: got status "
+msgstr ""
+
 msgid "Could not find the file \"{}\""
+msgstr ""
+
+msgid "Could not set screensaver status: got status "
 msgstr ""
 
 msgid "Current slide"
@@ -58,10 +86,16 @@ msgstr ""
 msgid "Error loading icon for about window"
 msgstr ""
 
+msgid "Error opening the file \"{}\""
+msgstr ""
+
 msgid "Error: access denied when trying to access screen saver settings in registry!"
 msgstr ""
 
 msgid "Highlight"
+msgstr ""
+
+msgid "Invalid log level \"{}\", try one of {}"
 msgstr ""
 
 msgid "Invalid time (mm or mm:ss expected), got \"{}\""
@@ -79,6 +113,9 @@ msgid ""
 "You can specify the PDF file to open on the command line if you don't want to use the \"Open File\" dialog."
 msgstr ""
 
+msgid "Not starting content or presenter window full screen because there is only one monitor"
+msgstr ""
+
 msgid "Notes"
 msgstr ""
 
@@ -94,10 +131,16 @@ msgstr ""
 msgid "PDF files"
 msgstr ""
 
+msgid "Pointer"
+msgstr ""
+
 msgid "Presenter fullscreen"
 msgstr ""
 
 msgid "Pympress Content"
+msgstr ""
+
+msgid "Pympress can not extract attached file"
 msgstr ""
 
 msgid "Pympress can not extract embedded media"
@@ -119,6 +162,9 @@ msgid "Pympress does not yet support link type \"{}\""
 msgstr ""
 
 msgid "Pympress does not yet support link type \"{}\" to \"{}\""
+msgstr ""
+
+msgid "Set level of verbosity in log file:"
 msgstr ""
 
 msgid "Set talk _Time"
@@ -146,6 +192,9 @@ msgid "Unknow widget {} to be fullscreened, aborting."
 msgstr ""
 
 msgid "Unknown event {}"
+msgstr ""
+
+msgid "Unsupported OS: can't enable/disable screensaver"
 msgstr ""
 
 msgid "Usage: {} [options] <presentation_file>"
@@ -187,7 +236,13 @@ msgstr ""
 msgid "_Blank screen"
 msgstr ""
 
+msgid "_Blue"
+msgstr ""
+
 msgid "_Close File"
+msgstr ""
+
+msgid "_Disabled"
 msgstr ""
 
 msgid "_File"
@@ -200,6 +255,9 @@ msgid "_Fullscreen"
 msgstr ""
 
 msgid "_Go to..."
+msgstr ""
+
+msgid "_Green"
 msgstr ""
 
 msgid "_Help"
@@ -235,6 +293,9 @@ msgstr ""
 msgid "_Quit"
 msgstr ""
 
+msgid "_Red"
+msgstr ""
+
 msgid "_Reset timer"
 msgstr ""
 
@@ -244,8 +305,20 @@ msgstr ""
 msgid "_Swap screens"
 msgstr ""
 
+msgid "access denied when trying to access screen saver settings in registry!"
+msgstr ""
+
+msgid "no action defined for this link!"
+msgstr ""
+
 msgid "pympress is a little PDF reader written in Python using Poppler for PDF rendering and GTK for the GUI.\n"
 msgstr ""
 
 msgid "pympress presenter"
+msgstr ""
+
+msgid "video support is disabled"
+msgstr ""
+
+msgid "{}, {}, {}, {}, or {}"
 msgstr ""
